--- a/app/src/main/res/layout/subject_page.xml
+++ b/app/src/main/res/layout/subject_page.xml
@@ -8,7 +8,8 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="650dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="700dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
