TextView ID angepasst

--- a/app/src/main/res/layout/form_page.xml
+++ b/app/src/main/res/layout/form_page.xml
@@ -71,7 +71,7 @@
                 android:text="@string/markLabel" />
 
             <EditText
-                android:id="@+id/markInput"
+                android:id="@+id/gradeValue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
