--- a/app/src/main/res/layout/subject_page.xml
+++ b/app/src/main/res/layout/subject_page.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/subjectPageLinearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:layout_marginBottom="700dp"
+        android:layout_marginBottom="650dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +26,16 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/gradesLinearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="150dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addButtonSP"
         android:layout_width="wrap_content"
@@ -38,4 +49,5 @@
         app:srcCompat="@drawable/ic_baseline_add_24"
         app:tint="@color/white"
         tools:ignore="SpeakableTextPresentCheck" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
