Widget fertig implementiert, Widget zeig Durchschnitt der Mathematik-Note an

--- a/app/src/main/res/layout/my_grades_widget.xml
+++ b/app/src/main/res/layout/my_grades_widget.xml
@@ -1,14 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/Widget.MyGrades.AppWidget.Container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:theme="@style/Theme.MyGrades.AppWidgetContainer">
 
     <TextView
         android:id="@+id/appwidget_text"
         style="@style/Widget.MyGrades.AppWidget.InnerView"
-        android:layout_width="228dp"
-        android:layout_height="157dp"
+        android:layout_width="236dp"
+        android:layout_height="185dp"
         android:layout_centerInParent="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
